@@ -2227,7 +2227,12 @@ namespace {
 			const unit u(units,game_map,status_ptr,teams,var, false);
 
 			preferences::encountered_units().insert(u.type_id());
-			map_location loc(var, game_events::get_state_of_game());
+			map_location loc;
+			if(cfg.has_attribute("x") && cfg.has_attribute("y")) {
+				loc = map_location(cfg.get_parsed_config(), game_events::get_state_of_game());
+			} else {
+				loc = map_location(var, game_events::get_state_of_game());
+			}
 			if(loc.valid()) {
 				if(utils::string_bool(cfg["find_vacant"])) {
 					loc = find_vacant_tile(*game_map,*units,loc);
